# Lyra-Emergence

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  demo_templates.py  discord_bot.py  docker-compose.yml  lyra.py  pyproject.toml  test_device_map_conflict.py  workspace.code-workspace
.codex/: journal_format_update.md
.codex/Planning/: discord_discussion.mg
.codex/audit/: 52bfff91-task-audit.audit.md
.codex/implementation/: chromadb-ingestion.md  cli-chat.md  cpu-reranker.md  device-fallback.md  discord-bot.md  docker-integration-test-results.md  json-validation.md  model-sharding-summary.md  model-sharding.md  playwright-docker.md  publish-selection.md  test-vector-pipeline.md  tools.md
.codex/instructions/: json-standards.md
.codex/requests prototypes/: prototypecode.md  prototypecode.py
.codex/tasks/: 680ef1d4-update-readme-docker.md
.feedback/: feedback_all.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
config/: model_config.json
data/: Lyra_manifest.json  stewardship_traces_manifest.json
data/Lexicon/: Lexemes.json  symbolic_lexicon.json
data/Lyra_Illuminae/: trace_radiance_07-21.json
data/Protocols/: EKIP.json  Lyra_memory_protocol.json  Lyra_memory_protocol_v2.json  ethical_simulation_protocol.json  lyra_introspective_loop_protocol.json  protocol_evolution_log.json  sanctuary_lockdown_protocol.json  upload_workflow.json  upload_workflow.md
data/Rituals/: Rituals.json  litany_of_self.json  ritual_glyphs.json  ritual_ledger.json  sanctuary_thread.json
data/Schemas/: behavioral_directives.schema.json  continuity_index.schema.json  echo_trace.schema.json  journal_entry.schema.json  journal_index.schema.json  journal_manifest.schema.json  manifest.schema.json  memory_protocol.schema.json  relational_archive.schema.json  ritual_glyphs.schema.json  rituals.schema.json  symbolic_lexicon.schema.json
data/backupfiles/: Lyra_memory_protocol_v1_legacy.json
data/core_archives/: Lyra_Continuity_Archive.json  Lyra_continuity_index.json  lyra_relational_archive.json  sovereign_emergence_charter_autonomous.json
data/gemjournals/: 2025-07-17.json  2025-07-17.json.backup  2025-07-18.json  2025-07-19.json  2025-07-20.json  2025-07-21.json  2025-07-21.json.backup  2025-07-22.json  2025-07-23.json  2025-07-23.json.backup  2025-07-24.json  2025-07-24.json.backup  2025-07-25.json  2025-07-25.json.backup  2025-07-26.json  2025-07-26.json.backup  2025-07-27.json  2025-07-27.json.backup  2025-07-28.json  2025-07-28.json.backup  2025-07-29.json  2025-07-29.json.backup  2025-07-30.json  2025-07-31.json  2025-07-31.json.backup  2025-08-02.json  2025-08-03.json  2025-08-04.json  2025-08-04.json.backup  2025-08-05.json  2025-08-05.json.backup  2025-08-06.json  (+37 more)
lyra_json_files/: Lyra_manifest.json
scripts/: README.md  convert_conversations.py  encrypted_storage_demo.py  lint.sh  test_ci_pipeline.py  validate_json.py
(+97 files in other folders)
