[project]
name = "lyra-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "flashrank>=0.2.10",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.9",
    "chromadb>=0.5.5",
    "rich>=14.1.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "discord.py>=2.4.0",
    "pytest>=8.4.1",
]
